--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,10 @@
 {
   "buildCommand": "next build",
-  "installCommand": "npm install",
   "framework": "nextjs",
   "nodeVersion": "18.x",
-  "env": {
-    "DATABASE_URL": "@database_url",
-    "NEXTAUTH_URL": "@nextauth_url",
-    "NEXTAUTH_SECRET": "@nextauth_secret"
-  },
   "functions": {
-    "src/app/api/**/*.ts": {
+    "src/app/api/**": {
       "maxDuration": 30
     }
-  },
-  "redirects": [
-    {
-      "source": "/blog/:slug/",
-      "destination": "/blog/:slug",
-      "permanent": false
-    }
-  ]
+  }
 }
